checker/tests/nullness/init/Uninit.java
// :: error: (initialization.fields.uninitialized)
public class Uninit {
    Object a;
}
